--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,5 +1,5 @@
 <!-- form handling -->
-<form method="POST" id="add_user">
+<form method="POST" id="add_user" action="/api/clients">
   <div class="new_user">
     <div class="form-group">
       <label for="name" class="text-light">Name</label>
