--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Care Management Application</title>
-</head>
-<body>
-
-  <!---Nav-->
-  <nav class="nav">
-    <div class="container">
-      <div class="text-center">
-        <a href="/" class="nav-brand text-dark">Care Management Application</a>
-      </div>
-    </div>
-
-  </nav>
-  
-</body>
-</html>
-
 <!--inclde header-->
 <%-include('header')%>
+
+<main id="site-main">
+  <div class="container">
+    <div class="box-nav d-flex-justify-between">
+      <a href="/add" class="border-shadow">
+        <span class="text-gradient">New User<i class="fas fa-user"></i>
+        </span>
+      </a>
+
+      <form action="/add" method="POST">
+        <table class="table">
+          <thead class="thead-dark">
+            <tr>
+              <th>ID</th>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Gender</th>
+              <th>Status</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+
+          <tbody>
+              <!--Show clients here-->
+            <%-include('show')%>
+
+          </tbody>
+        </table>
+      </form>
+    
+  
+
+
+    </div>
+  </div>
+</main>
 
 <!--includ footer-->
 
