--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,7 +10,7 @@
       <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
     </a>
 
-    <a href="" class="btn border-shadow update">
+    <a href="" class="btn border-shadow delete" data-id="<%= clients[i]._id%>">
       <span class="text-gradient"><i class="fas fa-times"></i></span>
     </a>
 
