--- a/views/update-client.ejs
+++ b/views/update-client.ejs
@@ -20,21 +20,21 @@
       <div class="new_user">
         <div class="form-group">
           <label for="name" class="text-light">Name</label>
-          <input type="hidden" name="id">
-          <input type="text" name="name" placeholder="Mark Stoenis">
+          <input type="hidden" name="id" value="<%=clients._id%>">
+          <input type="text" name="name" placeholder="Mark Stoenis" value="<%=clients.name%>">
         </div>
         <div class="form-group">
-          <label for="Email" class="text-light">Email</label>
-          <input type="text" name="email" placeholder="example@gmail.com">
+          <label for="Email" class="text-light">Email</label> 
+          <input type="text" name="email" placeholder="example@gmail.com" value="<%=clients.email%>">
         </div>
         <div class="form-group">
           <label for="gender" class="text-light">Gender</label>
           <div class="radio inline">
-            <input type="radio" id="radio-2" name="gender">
+            <input type="radio" id="radio-2" name="gender"> <%= clients.gender == 'Male' ? 'checked': '' %>
             <label for="radio-2" class="radio-label">Male</label>
           </div>
           <div class="radio inline">
-            <input type="radio" id="radio-3" name="gender" value="Female">
+            <input type="radio" id="radio-3" name="gender" value="Female">  <%= clients.gender == 'Female'?'checked': '' %>
             <label for="radio-3" class="radio-label">Female</label>
           </div>
         </div>
@@ -42,11 +42,11 @@
         <div class="form-group">
           <label for="gender" class="text-light">Status</label>
           <div class="radio inline">
-            <input type="radio" id="radio-4" name="status" value="Active">
+            <input type="radio" id="radio-4" name="status" value="Active">  <%= clients.status == 'Active'?'checked': '' %>
             <label for="radio-4" class="radio-label">Active</label>
           </div>
           <div class="radio inline">
-            <input type="radio" id="radio-5" name="status" value="Inactive">
+            <input type="radio" id="radio-5" name="status" value="Inactive">  <%= clients.status == 'Inactive'?'checked': '' %>
             <label for="radio-5" class="radio-label">Inactive</label>
           </div>
         </div>
