--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,42 +1,37 @@
 <!-- form handling -->
-<form method="POST" id="add_user" action="/api/clients">
-  <div class="new_user">
-    <div class="form-group">
-      <label for="name" class="text-light">Name</label>
-      <input type="hidden">
-      <input type="text" name="name" placeholder="Mark Stoenis">
-    </div>
-    <div class="form-group">
-      <label for="Email" class="text-light">Email</label>
-      <input type="text" name="email" placeholder="example@gmail.com">
-    </div>
-    <div class="form-group">
-      <label for="gender" class="text-light">Gender</label>
-      <div class="radio inline">
-        <input type="radio" id="radio-2">
-        <label for="radio-2" class="radio-label">Male</label>
+<div class="container">
+  <form method="POST" id="add_user" action="/api/clients">
+    <div class="form-row">
+      <div class="form-group col-md-4">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" placeholder="Name" name="name">
       </div>
-      <div class="radio inline">
-        <input type="radio" id="radio-3" name="gender">
-        <label for="radio-3" class="radio-label">Female</label>
+      <div class="form-group col-md-4">
+        <label for="last">Last Name</label>
+        <input type="text" class="form-control" id="last" placeholder="Last Name" name="last">
+      </div>
+      <div class="form-group col-md-4">
+        <label for="Age">Age</label>
+        <input type="text" class="form-control" id="age" placeholder="Age" name="age">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputAddress">Address</label>
+      <input type="text" class="form-control" id="inputAddress" name="address">
+    </div>
+    <div class="form-group">
+      <label for="medication">Medication</label>
+      <input type="text" class="form-control" id="medication" placeholder="" name="medication">
+    </div>
+
+    <div class="form-row">
+      <div class="form-group col-md-4">
+        <label for="carer">Carer Name</label>
+        <input type="text" class="form-control" id="name" placeholder="Carer Name" name="carer">
       </div>
     </div>
 
-    <div class="form-group">
-      <label for="gender" class="text-light">Status</label>
-      <div class="radio inline">
-        <input type="radio" id="radio-4" name="status" value="Active">
-        <label for="radio-4" class="radio-label">Active</label>
-      </div>
-      <div class="radio inline">
-        <input type="radio" id="radio-5" name="status" value="Inactive">
-        <label for="radio-5" class="radio-label">Inactive</label>
-      </div>
-    </div>
 
-    <div class="form-group">
-      <button type="submit" class="btn text-dark update">Save</button>
-    </div>
-
-  </div>
-</form>
+    <button type="submit" class="btn btn-dark btn-block text-light">Submit</button>
+  </form>
+</div>
