--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/ce18a140c1.js" crossorigin="anonymous"></script>
   <title>Care Management Application</title>
@@ -11,12 +13,10 @@
 
 <body>
 
-  <!---Nav-->
-  <nav class="nav">
-    <div class="container">
-      <div class="text-center">
-        <a href="/" class="nav-brand text-dark">Care Management Application</a>
-      </div>
+  <!---header-->
+   <header class="top">
+    <div class="top-text bg-dark">
+      <h2 class="md-title text-center pt-2 text-light ">Care Management Application</h2>
     </div>
 
-  </nav>
+  </header>
