--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,37 +3,37 @@
 
 <main id="site-main">
   <div class="container">
-    <div class="box-nav d-flex-justify-between">
-      <a href="/add" class="border-shadow">
-        <span class="text-gradient">New User<i class="fas fa-user"></i>
-        </span>
-      </a>
+    <a href="/add"><i class="fas fa-user mt-2"></i> New User</a>
 
-      <form action="/add" method="POST">
-        <table class="table">
-          <thead class="thead-dark">
-            <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Email</th>
-              <th>Gender</th>
-              <th>Status</th>
-              <th>Action</th>
-            </tr>
-          </thead>
-
-          <tbody>
-              <!--Show clients here-->
-            <%-include('show')%>
-
-          </tbody>
-        </table>
-      </form>
-    
-  
+    <div class="message"></div>
 
 
-    </div>
+    <table class="table mt-3">
+      <thead class="thead-light">
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Last Name</th>
+          <th>Age</th>
+          <th>Address</th>
+          <th>Medication</th>
+          <th>Carer Name</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <!--Show clients here-->
+        <%-include('show')%>
+
+      </tbody>
+    </table>
+
+
+
+
+
+
   </div>
 </main>
 
